--- a/admin/index.html
+++ b/admin/index.html
@@ -262,6 +262,7 @@
     <script src="app/pages/blog/blog.controller.js"></script>
     <script src="app/pages/descuento/descuento.controller.js"></script>
     <script src="app/pages/email/email.controller.js"></script>
+    <script src="app/pages/excursion/excursion.controller.js"></script>
 
     <script src="app/pages/cliente/cliente.controller.js"></script>
     <script src="app/pages/usuario/usuario.controller.js"></script>
