--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -9,7 +9,7 @@
         <section class="tile-header pl-0">
           <div class="row">
             <h1 class="heading text-center">{{ctrl.listaExcursiones[0].descripcion}}</h1>
-            <div class="col-md-12 f-18 mb text-info">Seleccione un paquete</div>
+            <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PAQUETE' | translate }}</div>
             <div class="card-container col-lg-3 col-sm-6 col-sm-12" ng-repeat="item in ctrl.listaPaquetes">
                 <div class="card" ng-click="ctrl.selPaquete(item.idpaquete)">
                   <div class="front" ng-class="{'bg-lightred': item.selected, 'bg-greensea':!item.selected}">
@@ -41,7 +41,9 @@
             </div>
 
           </div>
-          <div class="col-md-12 f-18 mb text-info">Seleccionar Productos</div>
+          <div class="row">
+            <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PRODUCTO' | translate }}</div>
+          </div>
           <div class="controls">
             <!-- <div class="btn-group" uib-dropdown>
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
@@ -58,18 +60,18 @@
 
         <ul class="mix-controls">
           <li class="select-all">
-            <label class="checkbox minotaur-checkbox inline-block m-0">Todos
+            <label class="checkbox minotaur-checkbox inline-block m-0">{{ 'Text.TODOS' | translate }}
               <input type="checkbox" ng-model="selectedAll" ng-click="ctrl.selectAll()"><div class="input-indicator"></div>
             </label>
           </li>
 
           <li ng-class="{'disabled': !ctrl.isSelected}" ng-click='ctrl.btnDescargarFiles();'>
-            <a href="javascript:;"><i class="fa fa-download" ></i> Descargar</a>
+            <a href="javascript:;"><i class="fa fa-download" ></i> {{ 'Text.DESCARGAR' | translate }}</a>
           </li>
 
-          <li class="pull-right select-all" style="font-size: 15px;font-weight: 600">
+         <!--  <li class="pull-right select-all" style="font-size: 15px;font-weight: 600">
             <i class="fa fa-shopping-cart" ></i> <span style="color:#1199d3;">{{ctrl.monto_total}}</span></a>
-          </li>
+          </li> -->
         </ul>
         <div class="row mix-grid">
           <div class="gallery" ng-mixitup magnific-popup="{
@@ -98,7 +100,7 @@
                     <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
                       <i class="fa fa-search"></i>
                     </a>
-                    <a class="img-select" href="javascript:;" ng-click="ctrl.btnPedidos($index)" uib-tooltip="Merchandise" tooltip-placement="top">
+                    <a class="img-select" ng-if="image.selected" href="javascript:;" ng-click="ctrl.btnPedidos($index)" uib-tooltip="Merchandising" tooltip-placement="top">
                       <i class="fa fa-gift"></i>
                     </a>
                   </div>
@@ -117,9 +119,9 @@
                 <button class="btn btn-warning" style="font-size:14px;color:#fff;" ng-click="ctrl.btnVolver()">
                   <i class="halcyon-icon-back"></i> Regresar
                 </button>
-                <div class="pull-right mt-10 ml-10" style="font-size: 15px;font-weight: 600">
+                <!-- <div class="pull-right mt-10 ml-10" style="font-size: 15px;font-weight: 600">
                   <i class="fa fa-shopping-cart" ></i> <span style="color:#1199d3;">{{ctrl.monto_total}}</span>
-                </div>
+                </div> -->
             </div>
             <!-- <minotaur-tile-close></minotaur-tile-close> -->
           </div>
