--- a/index.html
+++ b/index.html
@@ -195,10 +195,8 @@
 
 								<div class="social-media rounded text-center">
 
-									<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-									<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-									<a class="youtube" href="#"><i class="fa fa-youtube"></i></a>
-									<a class="instagram" href="#"><i class="fa fa-instagram"></i></a>
+									<a class="{{item.clase}}" href="{{item.enlace}}" target="_blank" ng-repeat="item in dataRedes"><i class="{{item.icono_rs}}"></i></a>
+
 
 								</div><!-- social-media -->
 
