--- a/admin/app/pages/config/config.html
+++ b/admin/app/pages/config/config.html
@@ -198,15 +198,15 @@
                     </div>
                   </div>
                   <hr class="line-dashed line-full"/>
-                  <div class="row" ng-show="false">
-                    <label class="col-sm-12 control-label minotaur-label">Redes Sociales : </label>
+                  <div class="row" ng-show="true">
+                    <label class="col-sm-12 control-label minotaur-label" style="text-align: left">Redes Sociales : </label>
                   </div>
-                  <div class="row" ng-show="false">
 
-                    <label class="col-sm-2 control-label minotaur-label">Youtube : </label>
+                  <div class="row" ng-repeat="(ind, item) in cg.listaRedes">
+                    <label class="col-sm-2 control-label minotaur-label">{{item.descripcion}} : </label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control text-center underline-input" id="redes1" placeholder="Youtube" ng-model="cg.fData.redes">
-                      <div class="onoffswitch labeled blue inline-block">
+                      <input type="text" class="form-control text-center underline-input inline-block" id="redes1" placeholder="{{item.descripcion}}" ng-model="item.enlace" style="width: 93%">
+                      <div class="onoffswitch labeled blue inline-block" ng-show="false">
                         <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch10" checked="">
                         <label class="onoffswitch-label" for="switch10">
                           <span class="onoffswitch-inner"></span>
@@ -214,8 +214,8 @@
                         </label>
                       </div>
                     </div>
-
                   </div>
+
                   <button class="btn btn-info minotaur-btn pull-left"
                    ng-click="forms.activeStep = 1">{{ 'Form.PREVIOUS' | translate }}</button>
                   <button class="btn btn-success btn-ef btn-ef-3 btn-ef-3c pull-right" ng-click="cg.aceptar()"><i class="fa fa-arrow-right"></i> {{ 'Form.SAVE' | translate }}</button>
