--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 	<meta name="keywords" content="{{dataWeb.keywords}}">
-	<meta name="description" content="{{dataWeb.descripcion_we}}">
+	<!-- <meta name="description" content="{{dataWeb.descripcion_we}}"> -->
+	<meta name="description" content="Goey Studios Punta Cana">
 	<!-- <base href="{{dirWeb}}"> -->
 	<title ng-bind="dataWeb.titulo_we"></title>
 	<!-- FAVICON AND APPLE TOUCH -->
@@ -315,7 +316,9 @@
 	<!-- <script src="assets/plugins/twitter/twitterfetcher.min.js"></script> -->
 
 	<!-- YOUTUBE PLAYER -->
-	<script src="assets/plugins/ytplayer/jquery.mb.ytplayer.min.js"></script>
+	<!-- <script src="assets/plugins/ytplayer/jquery.mb.ytplayer.min.js"></script> -->
+	<script src="https://www.youtube.com/iframe_api"></script>
+    <script src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 
 	<!-- COUNTDOWN -->
 	<!-- <script src="assets/plugins/countdown/jquery.countdown.min.js"></script> -->
