--- a/admin/app/pages/seccion/seccion.html
+++ b/admin/app/pages/seccion/seccion.html
@@ -86,7 +86,7 @@
 
                 <!-- tile body -->
                 <section class="tile-body">
-                  {{item.descripcion_fi}}
+                  {{item.descripcion_corta}}
                 </section>
                 <!-- /tile body -->
 
