--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
 	<!-- YOUTUBE PLAYER -->
 	<!-- <script src="assets/plugins/ytplayer/jquery.mb.ytplayer.min.js"></script> -->
-	<script src="https://www.youtube.com/iframe_api"></script>
+	<script src="//www.youtube.com/iframe_api"></script>
     <script src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 
 	<!-- COUNTDOWN -->
