--- a/index.html
+++ b/index.html
@@ -319,6 +319,8 @@
 	<!-- <script src="assets/plugins/ytplayer/jquery.mb.ytplayer.min.js"></script> -->
 	<script src="//www.youtube.com/iframe_api"></script>
     <script src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
+	<!-- VIMEO PLAYER -->
+    <script src="bower_components/angular-vimeo-embed/src/angular-vimeo-embed.js"></script>
 
 	<!-- COUNTDOWN -->
 	<!-- <script src="assets/plugins/countdown/jquery.countdown.min.js"></script> -->
