galeria en fichas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	<!-- FANCYBOX -->
 	<link rel="stylesheet" href="assets/plugins/fancybox/jquery.fancybox.css">
 
+	<link rel="stylesheet" href="bower_components/ngGallery/src/css/screen.css">
+	<link rel="stylesheet" href="bower_components/ngGallery/src/css/ngGallery.css">
 	<!-- REVOLUTION SLIDER -->
 	<link rel="stylesheet" href="assets/plugins/revolutionslider/css/settings.css">
 	<link rel="stylesheet" href="assets/plugins/revolutionslider/css/layers.css">
@@ -249,6 +251,7 @@
 	<!-- <script src="bower_components/ng-facebook/ngFacebook.js"></script> -->
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="bower_components/angular-g-recaptcha/angular-g-recaptcha.js"></script>
+	<script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
 	<script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
 
 	<!-- VIEWPORT -->
@@ -319,8 +322,6 @@
 	<!-- <script src="assets/plugins/ytplayer/jquery.mb.ytplayer.min.js"></script> -->
 	<script src="//www.youtube.com/iframe_api"></script>
     <script src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
-	<!-- VIMEO PLAYER -->
-    <script src="bower_components/angular-vimeo-embed/src/angular-vimeo-embed.js"></script>
 
 	<!-- COUNTDOWN -->
 	<!-- <script src="assets/plugins/countdown/jquery.countdown.min.js"></script> -->
