--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -60,7 +60,7 @@
                     socialshare-trigger="click"
                     class="icon icon-primary icon-ef-2 icon-ef-2b hover-color">
                     <i class="fa fa-facebook"></i>
-                  </a> -->
+                  </a> 
                   <a href="" socialshare
                     socialshare-provider="facebook"
                     socialshare-type="feed"
@@ -75,6 +75,22 @@
                     socialshare-popup-height="300"
                     socialshare-popup-width="400"
                     socialshare-trigger="click"
+                    class="icon icon-primary icon-ef-2 icon-ef-2b hover-color">
+                    <i class="fa fa-facebook"></i>
+                  </a>-->
+
+                  <a href="" 
+                  socialshare
+                  socialshare-provider="facebook"
+                  socialshare-type="feed"
+                  socialshare-via="145634995501895"
+                  socialshare-media="{{image.src_share}}"
+                  socialshare-text="720kb"
+                  socialshare-caption="720kb is enough"
+                  socialshare-url="http://localhost/caribbean.com"
+                  socialshare-popup-height="300"
+                  socialshare-popup-width="400"
+                  socialshare-trigger="click" 
                     class="icon icon-primary icon-ef-2 icon-ef-2b hover-color">
                     <i class="fa fa-facebook"></i>
                   </a>
