--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
 
 	<!-- FONTS -->
-	<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7C;Open+Sans:300,300i,400,400i,700,700i%7C;Playfair+Display:400,400i,900,900i"> -->
+	<!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:400,700%7C;Open+Sans:300,300i,400,400i,700,700i%7C;Playfair+Display:400,400i,900,900i"> -->
 	<!-- HALCYON ICONS -->
 	<link rel="stylesheet" href="assets/fonts/halcyon-icons/css/halcyon-icons.min.css">
 	<link rel="stylesheet" href="assets/fonts/halcyon-school-icons/css/halcyon-school-icons.min.css">
