--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -99,9 +99,9 @@
            }"
           >
             <div class="col-md-4 col-sm-6 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images">
-              
+
               <div class="img-container ">
-                <div class="flecha-up" ng-if="image.descargado == 1"></div>
+                <div class="ribbon-wrapper-green" ng-if="image.descargado == 1"><div class="ribbon-green">SOLD!</div></div>
                 <img class="img-responsive" ng-src="{{image.src}}" alt="">
                 <div class="img-details-static">
                   <h4>{{image.title}}</h4>
