--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -176,7 +176,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="row mix-grid">
+                  <div class="row mix-grid" masonry>
                     <div class="gallery" ng-mixitup magnific-popup="{
                       delegate: 'a.img-preview',
                       type: 'image',
@@ -188,7 +188,7 @@
                         preload: [0,1]
                       }}" >
 
-                      <div class="col-md-3 col-sm-4 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
+                      <div class="masonry-brick col-md-3 col-sm-4 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in c.images">
                       <div class="img-container">
                         <img class="img-responsive" ng-src="{{image.src}}" alt="" ng-if="image.idtipoproducto == 1">
                         <img class="img-responsive" ng-src="{{image.src_image}}" alt="" ng-if="image.idtipoproducto == 2">
