optimizacion de imagenes

--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -47,7 +47,7 @@
         >
           <div class="col-md-4 col-sm-6 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ga.images">
             <div class="img-container">
-              <img class="img-responsive" ng-src="{{image.src}}" alt="">
+              <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="">
               <div class="img-details-hover" style="float: right;">
                 <div>
                   <!-- <a href="" socialshare
