--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -85,7 +85,7 @@
           </li> -->
         </ul>
 
-        <div class="row mix-grid">
+        <div class="row mix-grid" masonry>
           <div class="gallery" ng-mixitup magnific-popup="{
             delegate: 'a.img-preview',
             type: 'image',
@@ -98,7 +98,7 @@
             }
            }"
           >
-            <div class="col-md-4 col-sm-6 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images">
+            <div class="masonry-brick col-md-4 col-sm-6 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images">
 
               <div class="img-container ">
                 <div class="ribbon-wrapper-green" ng-if="image.descargado == 1"><div class="ribbon-green">SOLD!</div></div>
@@ -138,7 +138,7 @@
             <!-- <minotaur-tile-close></minotaur-tile-close> -->
           </div>
         </section>
-        <div class="row mix-grid">
+        <div class="row mix-grid" masonry>
           <div class="gallery" ng-mixitup magnific-popup="{
             delegate: 'a.img-preview',
             type: 'image',
@@ -151,7 +151,7 @@
             }
            }"
           >
-            <div class="col-md-3 col-sm-4 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images" ng-if="image.selected">
+            <div class="masonry-brick col-md-3 col-sm-4 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images" ng-if="image.selected">
               <div class="img-container">
                 <img class="img-responsive" ng-src="{{image.src}}" alt="">
 
